--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
 			<div class="banner-item"><img src = "./src/images/banner6.jpg" width = "100%"></div>
 		</div>
 	</div>
+	<script>
+		import Banner from "./src/js/banner.es6.js";
+		console.log(Banner);
+	</script>
 </body>
 </html>
