--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>banner</title>
 </head>
 <body>
-	<div class="banner">
+	<div class="banner default">
 		<div class="banner-wrapper">
 			<div class="banner-item"><img src = "./src/images/banner1.jpg" width = "100%"></div>
 			<div class="banner-item"><img src = "./src/images/banner2.jpg" width = "100%"></div>
@@ -16,9 +16,35 @@
 			<div class="banner-item"><img src = "./src/images/banner6.jpg" width = "100%"></div>
 		</div>
 	</div>
-	<script>
-		import Banner from "./src/js/banner.es6.js";
-		console.log(Banner);
-	</script>
+	<!-- <div class="banner fade-banner">
+		<div class="banner-wrapper">
+			<div class="banner-item"><img src = "./src/images/banner1.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner2.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner3.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner4.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner5.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner6.jpg" width = "100%"></div>
+		</div>
+	</div>
+	<div class="banner cube-banner">
+		<div class="banner-wrapper">
+			<div class="banner-item"><img src = "./src/images/banner1.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner2.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner3.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner4.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner5.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner6.jpg" width = "100%"></div>
+		</div>
+	</div>
+	<div class="banner vertical-banner">
+		<div class="banner-wrapper">
+			<div class="banner-item"><img src = "./src/images/banner1.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner2.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner3.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner4.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner5.jpg" width = "100%"></div>
+			<div class="banner-item"><img src = "./src/images/banner6.jpg" width = "100%"></div>
+		</div>
+	</div> -->
 </body>
 </html>
